added css selectors to use @value

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=demo
+scraper.event-container-selector=.event-container
+scraper.event-name-selector=.event-name
+scraper.event-time-selector=.event-time
+scraper.event-network-selector=.event-network
+scraper.event-url-selector=.event-url a
