changed logging properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ scraper.event-name-selector=.event-name
 scraper.event-time-selector=.event-time
 scraper.event-network-selector=.event-network
 scraper.event-url-selector=.event-url a
+logging.level.com.everyonewatcheswomenssports.demo=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
